--- a/src/ghostcloud_charge.html
+++ b/src/ghostcloud_charge.html
@@ -155,7 +155,6 @@
                     <p><span>内存：</span><p class="Memory">1GB</p></p>
                     <p><span>磁盘空间：</span><p class="Disk">20GB</p></p>
                     <p><span>公网带宽：</span><p class="BandWidth">1Mbps</p></p>
-                    <p><span>私有仓库：</span>免费</p>
                     <div class="num-box">
                         <span>容器数量：</span>
                         <div class="num-info" id="containers-num" data-num=1>
@@ -270,8 +269,8 @@
             <div class="option-box">
                 <div class="title title1">服务简介</div>
                 <div class="caas-introduce">
-                    <h3>什么是PaaS平台服务？</h3>
-                    <p>Ghostcloud PaaS平台服务是指用户将自己私有主机接入到默认集群或是用户自己创建的集群中，通过精灵云PaaS管理平台来管理用户的主机。精灵云将根据用户接入主机的配置进行计费。用户可以通过下面的计价器了解精灵云PaaS平台服务的计费情况。</p>
+                    <h3>什么是GWS服务？</h3>
+                    <p>GWS服务即Ghostcloud Web Services服务，是指Ghostcloud为用户提供的一系列web服务，其中包括负载均衡等付费服务，以及高速公共镜像仓库、私有镜像仓库、应用模板、安全备份等免费服务项目。用户可以通过下面的计价器了解GWS付费服务的计费情况。</p>
                 </div>
                 <div class="title title3">选择服务</div>
                 <div class="config-option option4" style="margin-top: 15px">
@@ -309,7 +308,7 @@
                         <h3>安全备份</h3>
                     </div>
                     <div class="free-option free-option5 caas-free mr0">
-                        <h3>安全备份</h3>
+                        <h3>二级域名</h3>
                     </div>
                 </div>
             </div>
